<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="dismiss"
    tools:context=".SignInActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:padding="32dp"
        android:paddingTop="48dp"
        android:transitionName="@string/transition_google_login">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/need_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_google_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_failed_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/google_login_failed"
            android:textColor="@color/error"
            android:visibility="gone" />

        <include
            layout="@layout/loading"
            android:visibility="invisible" />

    </LinearLayout>
</FrameLayout>