<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="dismiss"
    tools:context=".AddCommentActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/gray1"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingTop="48dp"
        android:transitionName="@string/transition_google_login">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_comment"
                android:minHeight="100dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/input_layout_comment"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:text="@string/submit" />

        <include
            layout="@layout/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_comment"
            android:layout_marginLeft="30dp"
            android:visibility="gone" />

    </RelativeLayout>
</FrameLayout>